objects/Risks__c.object
<CustomObject>
    <fields>
        <fullName>Business_Impact_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Impact ID</label>
        <referenceTo>Business_Impact__c</referenceTo>
        <relationshipLabel>Risk</relationshipLabel>
        <relationshipName>Risk</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Resolution_Date__c</fullName>
        <label>Planned Resolution Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Control_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process Control ID</label>
        <referenceTo>Process_Control__c</referenceTo>
        <relationshipLabel>Risk</relationshipLabel>
        <relationshipName>Risk</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Business_Impact_ID__r.Potential_Risk_ID__r.Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Priority_Number__c</fullName>
        <formula>value(text( Business_Impact_ID__r.Severity__c)) * value(text( Root_Cause_ID__r.Occurance__c)) * value(text( Process_Control_ID__r.Detection__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Priority Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_Cause_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Root Cause ID</label>
        <referenceTo>Root_Cause__c</referenceTo>
        <relationshipLabel>Risk</relationshipLabel>
        <relationshipName>Risk</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Business_Impact_ID__c</columns>
        <columns>Process_Control_ID__c</columns>
        <columns>Root_Cause_ID__c</columns>
        <columns>Risk_Priority_Number__c</columns>
        <columns>Risk_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RISK-{0000000000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>